Fix z-index shenanigans

--- a/style/main.css
+++ b/style/main.css
@@ -88,7 +88,6 @@
     left: 0.5em;
     font-weight: bold;
     font-size: 24px;
-    z-index: 100;
     background-color: #f1f1f1;
 }
 
